--- a/front/index.html
+++ b/front/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Sistema de Cadastro</h1>
 
-    <form action="controllers/cadastrar.php" method="post">
+    <form action="../controllers/cadastrar.php" method="post">
       <div class="form-grid">
         <div class="form-group">
           <label for="nome">Nome completo:</label>
